--- a/NodeJS/08_post/index.html
+++ b/NodeJS/08_post/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
+    <title>Registeration Form</title>
 </head>
 
 <body>
-    <h1>Signup / Sigin Form</h1>
+    <h1>Sign Up / Sign In Form</h1>
     <form method="post" action="/user">
         <input type="text" name="email">
         <input type="password" name="password">
