--- a/NodeJS/08_post/index.html
+++ b/NodeJS/08_post/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Registeration Form</title>
+    <title>Form</title>
 </head>
 
 <body>
-    <h1>Sign Up / Sign In Form</h1>
+    <h1>Sign In Form</h1>
     <form method="post" action="/user">
-        <input type="text" name="email">
-        <input type="password" name="password">
+        <input type="text" placeholder="Email" name="email">
+        <input type="password" placeholder="Password" name="password">
         <input type="submit" value="Submit">
     </form>
 </body>
