--- a/NodeJS/ExpressJS/02_static/public/index.html
+++ b/NodeJS/ExpressJS/02_static/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Express JS</title>
     <link rel="stylesheet" href="/public/css/myStyle.css">
     <script src="/public/js/test.js"></script>
 </head>
+
 <body>
     <h1>Public Index</h1>
 </body>
+
 </html>
