--- a/NodeJS/ExpressJS/03_renderHtml/index.html
+++ b/NodeJS/ExpressJS/03_renderHtml/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Express</title>
+    <title>Express JS</title>
 </head>
+
 <body>
-    <h1>Wow Render using Express!</h1>
+    <h1>Data Render Using Express.JS!</h1>
 </body>
+
 </html>
